{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 267,
  "lineage": "412ff7c9-ac19-8ede-8893-9ebddb0f2cfb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846661378031:subnet/subnet-0694b97295577d65a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0694b97295577d65a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "846661378031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-041dc376351fe414e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846661378031:vpc/vpc-041dc376351fe414e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e69e272ef1e5188c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e4749c284125f707",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041dc376351fe414e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd8201c8eed997cd",
            "owner_id": "846661378031",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inventory_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-059afa9e3a9c7af0c",
            "arn": "arn:aws:ec2:us-east-1:846661378031:instance/i-0eb2e68d983d6d994",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0eb2e68d983d6d994",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e041adb08e3b5c5d"
              }
            ],
            "primary_network_interface_id": "eni-0e041adb08e3b5c5d",
            "private_dns": "ip-172-31-9-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.182",
            "public_dns": "ec2-100-53-218-18.compute-1.amazonaws.com",
            "public_ip": "100.53.218.18",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06adf70704a313a2c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "product-catalogue-test-inventory-api-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0694b97295577d65a",
            "tags": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-inventory-api",
              "Project": "product-catalogue"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-inventory-api",
              "Project": "product-catalogue"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073f5918e2a9ae83e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "846661378031",
            "id": "i-0eb2e68d983d6d994",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.custom",
            "aws_security_group.inventory_api",
            "aws_security_group.product_catalogue",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_instance_profile.existing",
            "data.aws_iam_role.ec2_role",
            "data.aws_subnet.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "product_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-059afa9e3a9c7af0c",
            "arn": "arn:aws:ec2:us-east-1:846661378031:instance/i-02121543bd7495a21",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02121543bd7495a21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e506880d8a8515e2"
              }
            ],
            "primary_network_interface_id": "eni-0e506880d8a8515e2",
            "private_dns": "ip-172-31-7-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.7.137",
            "public_dns": "ec2-44-199-208-151.compute-1.amazonaws.com",
            "public_ip": "44.199.208.151",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004798f18ae60b75d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "product-catalogue-test-product-catalogue-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0694b97295577d65a",
            "tags": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-tasks-service",
              "Project": "product-catalogue"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-tasks-service",
              "Project": "product-catalogue"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f9bc4e4dc9e9ad5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "846661378031",
            "id": "i-02121543bd7495a21",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.custom",
            "aws_security_group.product_catalogue",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_instance_profile.existing",
            "data.aws_iam_role.ec2_role",
            "data.aws_subnet.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inventory_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846661378031:security-group/sg-073f5918e2a9ae83e",
            "description": "Security group for inventory API EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073f5918e2a9ae83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "FastAPI from product catalogue",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f9bc4e4dc9e9ad5"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "product-catalogue-test-inventory-api-sg",
            "name_prefix": "",
            "owner_id": "846661378031",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-inventory-api-sg",
              "Project": "product-catalogue"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-inventory-api-sg",
              "Project": "product-catalogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-041dc376351fe414e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "846661378031",
            "id": "sg-073f5918e2a9ae83e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.product_catalogue",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "product_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:846661378031:security-group/sg-05f9bc4e4dc9e9ad5",
            "description": "Security group for product catalogue customer website EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f9bc4e4dc9e9ad5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask App (React + API)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "product-catalogue-test-product-catalogue-sg",
            "name_prefix": "",
            "owner_id": "846661378031",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-product-catalogue-sg",
              "Project": "product-catalogue"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "product-catalogue-test-product-catalogue-sg",
              "Project": "product-catalogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-041dc376351fe414e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "846661378031",
            "id": "sg-05f9bc4e4dc9e9ad5",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}